8255982: Extend BasicJMapTest to test with different GC Heap
The implementation of jmap tool depends on the implementation of
object iteration by different GC heap.
This patch extend the BasicJMapTest to cover differet GC Heap.